--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <ul>
             <li>
-                <a class="active" href="#/">Home</a>
+                <a class="active" href="#/">Hsgsgsdfgsome</a>
             </li>
             <li>
                 <a href="#/about">About</a>
