--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="active" href="#/">Hsgsgsdfgsome</a>
             </li>
             <li>
-                <a href="#/about">About</a>
+                <a href="#/about">About us again</a>
             </li>
             <li>
                 <a href="#/poi">POI</a>
