--- a/index.html
+++ b/index.html
@@ -2,50 +2,17 @@
 
 <head>
     <title>Cities App</title>
-    <style>
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #333;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: #111;
-        }
-
-        ul span {
-            float: right;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-    </style>
+<link rel="stylesheet" href="index.css">
 </head>
 
 <body ng-controller="indexController as indxCtrl">
 
         <ul>
             <li>
-                <a class="active" href="#/">Hsgsgsdfgsome</a>
+                <a class="active" href="#/">Home</a>
             </li>
             <li>
-                <a href="#/about">About us again</a>
+                <a href="#/about">About</a>
             </li>
             <li>
                 <a href="#/poi">POI</a>
