--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <li>
                 <a href="#/service">service</a>
             </li>
-
+            <li>
+                <a href="#/favorites">favorites</a>
+            </li>
+            <li>
+                <a href="#/login">login</a>
+            </li>
             <span ng-model="indxCtrl.userName">hello {{indxCtrl.userName}}</span>
         </ul>
 
@@ -41,8 +46,8 @@
         <script src="components/POI/poiCtrl.js"></script>
         <script src="components/Services/serviceController.js"></script>
         <script src="components/Services/localStorageModel.js"></script>
-
-
+        <script src="components/favorites/favorites.controller.js"></script>    
+        <script src="components/login/login.html"></script>
 
 
     </body>
