--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <script src="components/home/homeController.js"></script>
     <script src="components/register/registerController.js"></script>
     <script src="components/Login/loginController.js"></script>
+    <script src="components/poiPage/poiPageController.js"></script>
 </body>
 </html>
