--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     <script src="components/register/registerController.js"></script>
     <script src="components/Login/loginController.js"></script>
     <script src="components/poiPage/poiPageController.js"></script>
+    <script src="components/Services/dbService.js"></script>
 </body>
 </html>
