log and reg options

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <li>
             <a href="#/favorites">favorites</a>
         </li>
+        <li>
+            <a href="#/log">log</a>
+        </li>
+        <li>
+            <a href="#/reg">register</a>
+        </li>
         <span ng-model="indxCtrl.userName">hello {{indxCtrl.userName}}</span>
     </ul>
 
