--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#/reg">register</a>
         </li>
         <li ng-show="login">
-            <a  ng-click="indxCtrl.logOut()">LogOut</a>
+            <a href="" ng-click="indxCtrl.logOut()">LogOut</a>
         </li>
         <span ng-model="indxCtrl.userName">hello {{indxCtrl.userName}}</span>
     </ul>
