--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body ng-controller="indexController as indxCtrl">
 
     <ul>
-        <li>
+        <li ng-show="login">
             <a href="#/home">Home</a>
         </li>
         <li>
